--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Hello World</h1>
-	
+	<header class="header">
+		<div class="container"> header</div>
+	</header>
+	<main class="main"></main>
+	<footer class="footer"></footer>
 </body>
 </html>
