add float left and afteer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 	<header class="header">
-		<div class="container"> header</div>
+		<div class="container">
+			<div class="row">
+				<div class="div col-md-3">logo</div>
+				<div class="div col-md-6">menu</div>
+				<div class="div col-md-3">search</div>
+			</div>
+		</div>
 	</header>
 	<main class="main"></main>
 	<footer class="footer"></footer>
