--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -11,8 +11,21 @@
 	<header class="header">
 		<div class="container">
 			<div class="row">
-				<div class="div col-md-3">logo</div>
-				<div class="div col-md-6">menu</div>
+				<div class="div col-md-3">
+					<a href="">
+						<img src="images/logo.png.png" alt="">
+					</a>
+				</div>
+				<div class="div col-md-6">
+					<nav>
+						<ul class="menu">
+							<li><a href="">Home</a></li>
+							<li><a href="">Products</a></li>
+							<li><a href="">Payment</a></li>
+							<li><a href="">Shipping</a></li>
+						</ul>
+					</nav>
+					</div>
 				<div class="div col-md-3">search</div>
 			</div>
 		</div>
