add card and search

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 						</ul>
 					</nav>
 					</div>
-				<div class="div col-md-3">search</div>
+				<div class="div col-md-3">
+					<div class="search">
+						<input type="search" class="">
+						<input type="submit" name="search" value="" class="">
+					</div>
+					<div class="basket">b</div>
+				</div>
 			</div>
 		</div>
 	</header>
